[package]
name = "tx-forward"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.6", features = ["codec"] }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "sync", "time", "macros"] }
reqwest = { version = "0.11.1", features = ["json"] }
bytes = "1"
futures = "0.3"

ckb-jsonrpc-types = "0.100.0-rc2"
ckb-types = "0.100.0-rc2"
ckb-logger = { version ="0.100.0-rc2" }
ckb-logger-service = "0.100.0-rc2"
ckb-logger-config = "0.100.0-rc2"
ckb-jsonrpc_types_43 = { package = "ckb-jsonrpc-types", version = "0.43" }
ckb-types_43 = { package = "ckb-types", version = "0.43" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
jsonrpc-core = "18"
path-clean = "0.1.0"
